# desktop-grabber-aggregator

./: .codeclimate.yml  .gitignore  .landscape.yml  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  requirements-dev.txt  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  tox.ini
graddfril/desktop/grabber_aggregator_refimpl/: __init__.py  main.py  matrix.py
graddfril/desktop/grabber_aggregator_refimpl/tests/: test_main.py
