[metadata]
name = graddfril.desktop.grabber-aggregator-refimpl
author = The Graddfril Authors
author-email = graddfril@openmailbox.org
summary = A reference implementation of graddfril desktop aggregator.
description-file = README.rst
home-page = https://github.com/graddfril
requires-python = >=3.4
license = AGPLv3+
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
keywords =
    quantified self

[files]
namespace_packages =
    graddfril
    graddfril.desktop
packages =
    graddfril
    graddfril.desktop
    graddfril.desktop.grabber-aggregator-refimpl

[entry_points]
console_scripts =
    graddfril-ga = graddfril.desktop.grabber_aggregator_refimpl.main:main
